@@ -1,9 +1,6 @@
 package com.example.demo.exception;
 
-import com.example.demo.exception.notfound.CommentNotFoundException;
-import com.example.demo.exception.notfound.CommunityNotFoundException;
-import com.example.demo.exception.notfound.PostNotFoundException;
-import com.example.demo.exception.notfound.UserNotFoundException;
+import com.example.demo.exception.notfound.NotFoundException;
 import com.example.demo.response.ApiError;
 import com.example.demo.response.ApiResponse;
 import com.example.demo.response.ErrorDetail;
@@ -13,6 +10,8 @@ import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -20,25 +19,26 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-
-// todo check for duplicate code here, similar responses on same exceptions, etc.
-// make the class maintainable
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    //400 BAD REQUEST
     @ExceptionHandler({
             UserTooYoungException.class,
             IllegalArgumentException.class
     })
     public ResponseEntity<ApiResponse<Void>> handleBadRequest(Exception e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.BAD_REQUEST, "BAD_REQUEST", e.getMessage(), request, null);
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("request", e.getMessage())
+        );
+        return buildResponse(HttpStatus.BAD_REQUEST, "BAD_REQUEST", e.getMessage(), request, details);
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiResponse<Void>> handleMethodArgumentNotValidException(
+    public ResponseEntity<ApiResponse<Void>> handleValidationException(
             MethodArgumentNotValidException ex, HttpServletRequest request) {
+
         List<ErrorDetail> details = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
@@ -46,80 +46,105 @@ public class GlobalExceptionHandler {
                         error.getField(),
                         error.getDefaultMessage() != null ? error.getDefaultMessage() : "Validation failed"
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         return buildResponse(HttpStatus.BAD_REQUEST, "VALIDATION_ERROR", "Data provided is not valid", request, details);
     }
 
+    //401 UNAUTHORIZED
     @ExceptionHandler({
-            ExpiredJwtException.class,
+            BadCredentialsException.class,
             AuthenticationException.class,
+            ExpiredJwtException.class,
             JwtException.class
     })
     public ResponseEntity<ApiResponse<Void>> handleUnauthorized(Exception e, HttpServletRequest request) {
-        String message = e instanceof ExpiredJwtException ? "This token has expired." : e.getMessage();
-        return buildResponse(HttpStatus.UNAUTHORIZED, "UNAUTHORIZED", message, request, null);
+        String message = (e instanceof ExpiredJwtException) ? "This token has expired." : e.getMessage();
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("authentication", message)
+        );
+        return buildResponse(HttpStatus.UNAUTHORIZED, "UNAUTHORIZED", message, request, details);
     }
 
-    @ExceptionHandler({AccessDeniedException.class,
-                       IllegalStateException.class
-    })
-    public ResponseEntity<ApiResponse<Void>> handleAccessDeniedException(
-            Exception e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.FORBIDDEN, "FORBIDDEN", e.getMessage(), request, null);
-    }
-
+    //403 FORBIDDEN
     @ExceptionHandler({
-            CommentNotFoundException.class,
-            PostNotFoundException.class,
-            UserNotFoundException.class,
-            CommunityNotFoundException.class
+            AccessDeniedException.class,
+            IllegalStateException.class
     })
-    public ResponseEntity<ApiResponse<Void>> handleNotFoundException(Exception e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.NOT_FOUND, "NOT_FOUND", e.getMessage(), request, null);
+    public ResponseEntity<ApiResponse<Void>> handleForbidden(Exception e, HttpServletRequest request) {
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("authorization", e.getMessage())
+        );
+        return buildResponse(HttpStatus.FORBIDDEN, "FORBIDDEN", e.getMessage(), request, details);
+    }
+
+    //404 NOT FOUND
+    @ExceptionHandler(NotFoundException.class)
+    public ResponseEntity<ApiResponse<Void>> handleNotFound(NotFoundException e, HttpServletRequest request) {
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("resource", e.getMessage())
+        );
+        return buildResponse(HttpStatus.NOT_FOUND, "NOT_FOUND", e.getMessage(), request, details);
+    }
+
+    //409 CONFLICT
+    @ExceptionHandler(DuplicateUserInformationException.class)
+    public ResponseEntity<ApiResponse<Void>> handleConflict(Exception e, HttpServletRequest request) {
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("conflict", e.getMessage())
+        );
+        return buildResponse(HttpStatus.CONFLICT, "CONFLICT", e.getMessage(), request, details);
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
-    public ResponseEntity<ApiResponse<Void>> handleDatabaseError(DataIntegrityViolationException ex, HttpServletRequest request) {
+    public ResponseEntity<ApiResponse<Void>> handleDataIntegrityViolation(DataIntegrityViolationException ex, HttpServletRequest request) {
         List<ErrorDetail> details = List.of(
-                new ErrorDetail("database", ex.getMostSpecificCause().getMessage())
+                new ErrorDetail("database", "Database constraint violation")
         );
-        return buildResponse(HttpStatus.CONFLICT, "CONFLICT", "Database conflict error", request, details);
+        return buildResponse(HttpStatus.CONFLICT, "DATA_CONFLICT", "Database resource conflict or constraint violation.", request, details);
     }
 
+    //413 PAYLOAD TOO LARGE
     @ExceptionHandler(MaxUploadSizeExceededException.class)
     public ResponseEntity<ApiResponse<Void>> handleMaxSizeException(MaxUploadSizeExceededException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.PAYLOAD_TOO_LARGE, "PAYLOAD_TOO_LARGE", "Max file size exceeded.", request, null);
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("file", "File size exceeds maximum allowed upload limit.")
+        );
+        return buildResponse(HttpStatus.PAYLOAD_TOO_LARGE, "PAYLOAD_TOO_LARGE", "Max file size exceeded.", request, details);
     }
 
-    @ExceptionHandler(BusinessLogicException.class)
-    public ResponseEntity<ApiResponse<Void>> handleBusinessLogicException(BusinessLogicException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.UNPROCESSABLE_ENTITY, "UNPROCESSABLE_ENTITY", e.getMessage(), request, null);
+    //422 UNPROCESSABLE ENTITY
+    @ExceptionHandler({
+            IdenticalPasswordException.class,
+            BusinessLogicException.class
+    })
+    public ResponseEntity<ApiResponse<Void>> handleBusinessLogic(Exception e, HttpServletRequest request) {
+        String field = (e instanceof IdenticalPasswordException) ? "newPassword" : "businessRule";
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail(field, e.getMessage())
+        );
+        return buildResponse(HttpStatus.UNPROCESSABLE_ENTITY, "UNPROCESSABLE_ENTITY", e.getMessage(), request, details);
     }
 
+    //429 TOO MANY REQUESTS
     @ExceptionHandler(RateLimitExceededException.class)
-    public ResponseEntity<ApiResponse<Void>> handleRateLimitExceeded(RateLimitExceededException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.TOO_MANY_REQUESTS, "TOO_MANY_REQUESTS", e.getMessage(), request, null);
+    public ResponseEntity<ApiResponse<Void>> handleRateLimit(RateLimitExceededException e, HttpServletRequest request) {
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("rateLimit", e.getMessage())
+        );
+        return buildResponse(HttpStatus.TOO_MANY_REQUESTS, "TOO_MANY_REQUESTS", e.getMessage(), request, details);
     }
 
-    @ExceptionHandler(FileStorageException.class)
-    public ResponseEntity<ApiResponse<Void>> handleFileStorage(FileStorageException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "FILE_STORAGE_ERROR", e.getMessage(), request, null);
-    }
-
-    @ExceptionHandler(Exception.class)
+    //500 INTERNAL SERVER ERROR
+    @ExceptionHandler({
+            FileStorageException.class,
+            Exception.class
+    })
     public ResponseEntity<ApiResponse<Void>> handleGenericException(Exception e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "INTERNAL_SERVER_ERROR", "An unexpected error occurred.", request, null);
-    }
-
-    @ExceptionHandler(DuplicateUserInformationException.class)
-    public ResponseEntity<ApiResponse<Void>> handleDuplicateUserInformationException (DuplicateUserInformationException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.CONFLICT, "CONFLICT",e.getMessage(),request,null);
-    }
-
-    @ExceptionHandler(IdenticalPasswordException.class)
-    public ResponseEntity<ApiResponse<Void>> handleIdenticalPasswordException (IdenticalPasswordException e, HttpServletRequest request) {
-        return buildResponse(HttpStatus.UNPROCESSABLE_CONTENT, "VALIDATION_FAILED", e.getMessage(), request, null);
+        List<ErrorDetail> details = List.of(
+                new ErrorDetail("server", "An internal error occurred. Please try again later.")
+        );
+        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "INTERNAL_SERVER_ERROR", "An unexpected error occurred.", request, details);
     }
 
     private ResponseEntity<ApiResponse<Void>> buildResponse(
